Update parent project from colorvector to experiments.plus

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="dark light" />
-    <title>colorvector.net - gingerbrown</title>
+    <meta name="theme-color" content="#b06500" />
+    <title>experiments.plus - Ginger Brown</title>
     <link rel="stylesheet" href="assets/styles.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/icon-192.png" />
+    <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -15,17 +19,24 @@
   </head>
   <body>
     <main>
-      <h1>colorvector.net</h1>
-      <p class="intro"><b>colorvector.net</b> is a productivity-focused development initiative that creates a suite of innovative tools designed to streamline work, enhance efficiency, and support creative problem-solving. Each tool within the project is uniquely identified by a codename composed of a color and a vector, reflecting both its functional direction and its distinctive identity.</p>
+      <img
+        src="assets/experimentsplus002.png"
+        alt="Ginger Brown utility icon"
+        class="app-icon"
+      />
+      <h1>Codename: Ginger Brown</h1>
+
+      <p class="intro">Ginger Brown targets a common connectivity issue on captive Wi-Fi portals. Because HTTPS requests sometimes skip the redirect to the login page, this utility deliberately serves static assets over plain HTTP to coax the network into presenting its sign-in screen. The page stays intentionally minimal so the browser triggers the redirect as soon as possible.</p>
+
+      <h2>experiments.plus</h2>
+      <p><b>experiments.plus</b> begins with a vision of what better productivity could look like. From that imagined state, each experiment is designed backward: testing, refining, and learning along the way.</p>
+      <p>Before moving into implementation, the project steps back to broaden its view, asking open questions such as "What if we could work only half as long each day?", "What if this scaled effortlessly across a team?", or "What if this improved productivity tenfold?" These questions serve as conceptual lenses, each helping ideas stretch beyond their immediate scope. None of them defines the goal; rather, they keep the exploration expansive and alive.</p>
+      <p>At first glance, each step may seem modest: a small tweak, an incremental test, a quiet improvement. Yet it is precisely these humble, deliberate experiments that form the essence of this project. The challenge lies not in grand breakthroughs, but in the discipline to keep improving what seems ordinary. Over time, that persistence shapes a new kind of productivity, built not on certainty but on continuous learning.</p>
       <p>
-        <a class="icon-link" href="https://github.com/colorvector">
-          <i class="fa-brands fa-github" aria-hidden="true"></i>
+        <a class="icon-link" href="https://experiments.plus" aria-label="experiments.plus homepage">
+          <i class="fa-solid fa-globe" aria-hidden="true"></i>
         </a>
       </p>
-
-      <h2>Codename: Ginger Brown</h2>
-
-      <p>Ginger Brown addresses a common connectivity issue encountered on public Wi-Fi networks that require authentication via a redirect page. In many such networks, HTTPS requests can fail to trigger the login redirect, preventing users from completing the authentication process. To solve this, Ginger Brown serves all its content exclusively over plain HTTP, making it more likely for the redirect to work successfully. The tool itself is intentionally minimal — it exists solely to facilitate this connection process.</p>
 
     </main>
     <footer>
@@ -35,5 +46,3 @@
     <script src="assets/app.js"></script>
   </body>
 </html>
-
-
