--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
       <p class="intro">Ginger Brown targets a common connectivity issue on captive Wi-Fi portals. Because HTTPS requests sometimes skip the redirect to the login page, this utility deliberately serves static assets over plain HTTP to coax the network into presenting its sign-in screen. The page stays intentionally minimal so the browser triggers the redirect as soon as possible.</p>
 
+      <h2>How to use it</h2>
+      <p>Open <a href="http://http.experiments.plus">http.experiments.plus</a> on the network that needs a captive portal login. The plain HTTP request encourages the redirect to appear.</p>
+
       <h2>experiments.plus</h2>
       <p><b>experiments.plus</b> begins with a vision of what better productivity could look like. From that imagined state, each experiment is designed backward: testing, refining, and learning along the way.</p>
       <p>Before moving into implementation, the project steps back to broaden its view, asking open questions such as "What if we could work only half as long each day?", "What if this scaled effortlessly across a team?", or "What if this improved productivity tenfold?" These questions serve as conceptual lenses, each helping ideas stretch beyond their immediate scope. None of them defines the goal; rather, they keep the exploration expansive and alive.</p>
